@startuml

title __MYFRUITS's Class Diagram__\n

  namespace com.example.myfruits {
    class com.example.myfruits.Activities.CustomDesignList {
        ~ arrCounter : int[]
        ~ fruitNames : String[]
        ~ imageResourceArray : int[]
        ~ list : ArrayList<Fruit>
        ~ listView : ListView
        ~ sum : int
        + onCreateOptionsMenu()
        + onOptionsItemSelected()
        # onCreate()
    }
  }
  

  namespace com.example.myfruits {
    class com.example.myfruits.Models.Fruit {
        - color : int
        - fruitImageId : int
        - fruitName : String
        - fruitWeight : int
        + Fruit()
        + getColor()
        + getFruitImageId()
        + getFruitName()
        + getFruitWeight()
        + setColor()
        + setFruitImageId()
        + setFruitName()
        + setFruitWeight()
        + toString()
    }
  }
  

  namespace com.example.myfruits {
    class com.example.myfruits.Adapters.FruitAdapter {
        - context : Context
        - layout : int
        - list : ArrayList<Fruit>
        + FruitAdapter()
        + getView()
    }
  }
  

  namespace com.example.myfruits {
    class com.example.myfruits.Activities.MainActivity {
        ~ bCustom : Button
        ~ bSimple : Button
        + onClick()
        + onCreateOptionsMenu()
        + onOptionsItemSelected()
        # onCreate()
    }
  }
  

  namespace com.example.myfruits {
    class com.example.myfruits.Activities.SimpleDesignList {
        ~ adapter : ArrayAdapter<String>
        ~ fruitNames : String[]
        ~ lvSimple : ListView
        + onCreateOptionsMenu()
        + onOptionsItemSelected()
        # onCreate()
    }
  }
  

  com.example.myfruits.Activities.CustomDesignList -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myfruits.Activities.CustomDesignList o-- com.example.myfruits.Adapters.FruitAdapter : adapter
  com.example.myfruits.Adapters.FruitAdapter -up-|> android.widget.ArrayAdapter
  com.example.myfruits.Activities.MainActivity .up.|> android.view.View.OnClickListener
  com.example.myfruits.Activities.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myfruits.Activities.SimpleDesignList -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
